--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <title>Bienvenue sur 'Oh My Food'</title>
 </head>
 
@@ -61,7 +63,7 @@
                                 <h3>La palette du goût</h3>
                                 <span>Ménilmontant</span>
                             </div>
-                            <img class="like_icon" src="assets/images/icons/heart-regular.svg" alt="Icone de coeur">
+                            <img class="like" src="assets/images/icons/like.png" alt="Icone de coeur">
                         </div>
                     </a>
                     <a href="note_enchantee.html" class="card">
@@ -72,7 +74,9 @@
                                 <h3>La note enchantée</h3>
                                 <span>Charonne</span>
                             </div>
-                            <img class="like_icon" src="assets/images/icons/heart-regular.svg" alt="Icone de coeur">
+                            <div class="material-symbols-outlined liked">
+                                favorite
+                            </div>
                         </div>
                     </a>
                     <a href="a_la_francaise.html" class="card">
@@ -83,7 +87,7 @@
                                 <h3>À la française</h3>
                                 <span>Cité Rouge</span>
                             </div>
-                            <img class="like_icon" src="assets/images/icons/heart-regular.svg" alt="Icone de coeur">
+                            <img class="like" src="assets/images/icons/like.png" alt="Icone de coeur">
                         </div>
                     </a>
                     <a href="delice_des_sens.html" class="card">
@@ -94,7 +98,7 @@
                                 <h3>Le délice des sens</h3>
                                 <span>Folie-Méricourt</span>
                             </div>
-                            <img class="like_icon" src="assets/images/icons/heart-regular.svg" alt="Icone de coeur">
+                            <img class="like" src="assets/images/icons/like.png" alt="Icone de coeur">
                         </div>
                     </a>
                 </div>
