--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/restaurants.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>La palette du goût</title>
 </head>
 
 <body>
     <style></style>
     <header>
-        <a id="return" href="home.html"><img src="assets/images/icons/GoBack.png" alt="Icone de fleche de retour en arrière"></a>
+        <a id="return" href="index.html"><img src="assets/images/icons/GoBack.png"
+                alt="Icone de fleche de retour en arrière"></a>
         <div id="logo">
             <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
         </div>
@@ -21,7 +23,8 @@
 
     <main>
         <section id="preview">
-            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant 'La palette du goût'">
+            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="Photo du restaurant 'La palette du goût'">
         </section>
 
         <section id="main_menu">
