--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/restaurants.css">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+        rel="stylesheet" />
     <title>Le délice des sens</title>
 </head>
 
 <body>
     <header>
-        <a id="return" href="home.html"><img src="assets/images/icons/GoBack.png" alt="Icone de fleche de retour en arrière"></a>
+        <a id="return" href="index.html"><img src="assets/images/icons/GoBack.png"
+                alt="Icone de fleche de retour en arrière"></a>
         <div id="logo">
             <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
         </div>
@@ -20,7 +23,8 @@
 
     <main>
         <section id="preview">
-            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant 'La palette du goût'">
+            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Photo du restaurant 'La palette du goût'">
         </section>
 
         <section id="main_menu">
