--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/home.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <title>Bienvenue sur 'Oh My Food'</title>
 </head>
 
@@ -56,7 +57,8 @@
                 <h2>Restaurants</h2>
                 <div id="restaurants_list">
                     <a href="palette_du_gout.html" class="card">
-                        <img class="card_img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant 'La palette du Gout'">
+                        <img class="card_img" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="Photo du restaurant 'La palette du Gout'">
                         <div class="new_tag">Nouveau</div>
                         <div class="card_info">
                             <div class="card_txt">
@@ -67,7 +69,8 @@
                         </div>
                     </a>
                     <a href="note_enchantee.html" class="card">
-                        <img class="card_img" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant 'La note enchantée'">
+                        <img class="card_img" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                            alt="Photo du restaurant 'La note enchantée'">
                         <div class="new_tag">Nouveau</div>
                         <div class="card_info">
                             <div class="card_txt">
@@ -80,7 +83,8 @@
                         </div>
                     </a>
                     <a href="a_la_francaise.html" class="card">
-                        <img class="card_img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant 'A la française'">
+                        <img class="card_img" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt="Photo du restaurant 'A la française'">
                         <div class="new_tag hidden">Nouveau</div>
                         <div class="card_info">
                             <div class="card_txt">
@@ -91,7 +95,9 @@
                         </div>
                     </a>
                     <a href="delice_des_sens.html" class="card">
-                        <img class="card_img" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant 'Le délice des sens'">
+                        <img class="card_img"
+                            src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Photo du restaurant 'Le délice des sens'">
                         <div class="new_tag hidden">Nouveau</div>
                         <div class="card_info">
                             <div class="card_txt">
