--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </header>
 
     <main class="appear">
-        <section id="location">
+        <div id="location">
             <img src="assets/images/icons/Pin.svg" alt="Icone de géolocalisation">
             <span>Paris,Belleville</span>
-        </section>
+        </div>
         <section id="intro">
             <h1>Réservez le menu qui vous convient</h1>
             <span>Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
