--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -22,10 +22,10 @@
     </header>
 
     <main>
-        <section id="preview">
+        <div id="preview">
             <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
-        </section>
+        </div>
 
         <section id="main_menu">
             <div id="restaurant_title">
