--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -22,10 +22,10 @@
     </header>
 
     <main>
-        <section id="preview">
+        <div id="preview">
             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
-        </section>
+        </div>
 
         <section id="main_menu">
             <div id="restaurant_title">
