--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -22,10 +22,10 @@
     </header>
 
     <main>
-        <section id="preview">
+        <div id="preview">
             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
-        </section>
+        </div>
 
         <section id="main_menu">
             <div id="restaurant_title">
