last last modifs
enfin !

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </header>
 
     <main class="appear">
-        <figure id="location">
+        <form id="location">
             <img src="assets/images/icons/Pin.svg" alt="Icone de géolocalisation">
-            <figcaption>Paris,Belleville</figcaption>
-        </figure>
+            <input type="text" placeholder="Paris, Belleville"></input>
+        </form>
         <section id="intro">
             <h1>Réservez le menu qui vous convient</h1>
             <span>Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
