--- a/html/delice_des_sens.html
+++ b/html/delice_des_sens.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/shared.css">
-    <link rel="stylesheet" href="css/restaurants.css">
+    <link rel="stylesheet" href="../css/shared.css">
+    <link rel="stylesheet" href="../css/restaurants.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         rel="stylesheet" />
@@ -14,16 +14,16 @@
 
 <body>
     <header>
-        <a id="return" href="index.html"><img src="assets/images/icons/GoBack.png"
+        <a id="return" href="../index.html"><img src="../assets/images/icons/GoBack.png"
                 alt="Icone de fleche de retour en arrière"></a>
         <figure id="logo">
-            <img src="assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
+            <img src="../assets/images/logo/ohmyfood.png" alt="Logo 'OhMyFood'">
         </figure>
     </header>
 
     <main>
         <figure id="preview">
-            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Photo du restaurant 'La palette du goût'">
         </figure>
 
@@ -48,7 +48,7 @@
                     </div>
                     <span class="item_price">25€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div class="item">
@@ -58,7 +58,7 @@
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div class="item">
@@ -68,7 +68,7 @@
                     </div>
                     <span class="item_price">20€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div>
@@ -82,7 +82,7 @@
                     </div>
                     <span class="item_price">40€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div class="item">
@@ -92,7 +92,7 @@
                     </div>
                     <span class="item_price">35€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div class="item">
@@ -102,7 +102,7 @@
                     </div>
                     <span class="item_price">44€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div>
@@ -116,7 +116,7 @@
                     </div>
                     <span class="item_price">18€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div class="item">
@@ -126,7 +126,7 @@
                     </div>
                     <span class="item_price">22€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
                 <div class="item">
@@ -136,7 +136,7 @@
                     </div>
                     <span class="item_price">23€</span>
                     <div class="check_mark">
-                        <img src="assets/images/icons/check.png" alt="Marque de validation">
+                        <img src="../assets/images/icons/check.png" alt="Marque de validation">
                     </div>
                 </div>
             </article>
@@ -148,11 +148,11 @@
         <span id="footer_logo">ohmyfood</span>
         <nav>
             <a href="">
-                <img src="assets/images/icons/cutlery.svg" alt="Icone de couverts de table">
+                <img src="../assets/images/icons/cutlery.svg" alt="Icone de couverts de table">
                 <span>Proposer un restaurant</span>
             </a>
             <a href="">
-                <img src="assets/images/icons/hands.svg" alt="Icone d'une poignée de main">
+                <img src="../assets/images/icons/hands.svg" alt="Icone d'une poignée de main">
                 <span>Devenir partenaire</span>
             </a>
             <a href="">Mentions légales</a>
