last last last update ?
on espere

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="appear">
         <form id="location">
             <img src="assets/images/icons/Pin.svg" alt="Icone de géolocalisation">
-            <input type="text" placeholder="Paris, Belleville"></input>
+            <input type="text" placeholder="Paris, Belleville">
         </form>
         <section id="intro">
             <h1>Réservez le menu qui vous convient</h1>
